# python-tamal

./: .gitignore  404.html  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
search/: search_index.json
tamal/: _wrap.py  defaults.py  wrap.py
tests/: test_breaking.py  test_wrap.py
