[tool.poetry]
name = "tamal"
version = "0.1.0"
description = "A library for wrapping text"
authors = ["Jonathan Herrera <jonathan.herrera@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"
uneedtest = "^0.1.0"
coverage = "^7.6.8"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
extra_standard_library=["uneedtest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
